--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>insurance_eureka</module>
+        <module>insurance_common</module>
+        <module>insurance_gateway</module>
     </modules>
 
     <!--指定父级依赖，子模块，将无需再引入这些依赖-->
